# Backend/db/sqlc/info/models.go
@@ -5,6 +5,7 @@
 package db
 
 import (
+	"github.com/google/uuid"
 	"github.com/jackc/pgx/v5/pgtype"
 )
 
@@ -17,7 +18,7 @@ type Accompanyrequest struct {
 	FindType      string             `json:"find_type"`
 	FindTarget    string             `json:"find_target"`
 	Sociability   string             `json:"sociability"`
-	Certification bool        `json:"certification"`
+	Certification bool       `json:"certification"`
 	InfoChangedAt pgtype.Timestamptz `json:"info_changed_at"`
 }
 
@@ -68,7 +69,7 @@ type Fixinformation struct {
 	Blood             string             `json:"blood"`
 	Age               int32              `json:"age"`
 	Constellation     string             `json:"constellation"`
-	Certification     bool        `json:"certification"`
+	Certification     bool       `json:"certification"`
 	CreatedAt         pgtype.Timestamptz `json:"created_at"`
 	PasswordChangedAt pgtype.Timestamptz `json:"password_changed_at"`
 	Role              string             `json:"role"`
@@ -86,7 +87,7 @@ type Hobbyrequest struct {
 	FindTarget    string             `json:"find_target"`
 	Experience    int32        `json:"experience"`
 	Sociability   string        `json:"sociability"`
-	Certification bool        `json:"certification"`
+	Certification bool       `json:"certification"`
 	InfoChangedAt pgtype.Timestamptz `json:"info_changed_at"`
 }
 
@@ -115,8 +116,17 @@ type Loverrequest struct {
 	AnnualSalary  int32              `json:"annual_salary"`
 	Sociability   string             `json:"sociability"`
 	Religious     string             `json:"religious"`
-	Certification bool        `json:"certification"`
+	Certification bool       `json:"certification"`
 	InfoChangedAt pgtype.Timestamptz `json:"info_changed_at"`
+}
+
+type Session struct {
+	ID          uuid.UUID          `json:"id"`
+	Email       string             `json:"email"`
+	AccessToken string             `json:"access_token"`
+	IsBlocked   bool               `json:"is_blocked"`
+	ExpiresAt   pgtype.Timestamptz `json:"expires_at"`
+	CreatedAt   pgtype.Timestamptz `json:"created_at"`
 }
 
 type Targetlist struct {
